--- a/PersonalWebsite/PersonalWebsite.csproj
+++ b/PersonalWebsite/PersonalWebsite.csproj
@@ -137,6 +137,7 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\css\img\nav_gv2.fw.png" />
     <Content Include="Content\css\index_style2.css" />
     <Content Include="Content\css\img\in_top_bj.jpg" />
     <Content Include="Content\css\img\nav_gv.png" />
